--- a/package.json
+++ b/package.json
@@ -15,5 +15,9 @@
   "bugs": {
     "url": "https://github.com/dannyrc100/CLI-Bamazon/issues"
   },
-  "homepage": "https://github.com/dannyrc100/CLI-Bamazon#readme"
+  "homepage": "https://github.com/dannyrc100/CLI-Bamazon#readme",
+  "dependencies": {
+    "inquirer": "^5.0.1",
+    "mysql": "^2.15.0"
+  }
 }
